# kandev

./: .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md
.agents/agents/: architect.md  code-review.md  implementer.md  pr-poller.md  qa.md  security-auditor.md  simplify.md  test-engineer.md  verify.md
.claude/commands/: harness-improvement.md  pr-fixup.md  spec-driven-development.md
.codex/agents/: architect.toml  code-review.toml  implementer.toml  pr-poller.toml  qa.toml  security-auditor.toml  simplify.toml  spark-explorer.toml  spark-implementer.toml  test-engineer.toml  verify.toml
.cursor/agents/: architect.md  code-review.md  implementer.md  pr-poller.md  qa.md  security-auditor.md  simplify.md  test-engineer.md  verify.md
.cursor/rules/: kandev-harness.mdc  kandev-pr-fixup.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: collect-macos-desktop-diagnostics.sh  release-workflow-contract_test.py
.github/workflows/: backend-tests.yml  ci-base-image.yml  claude-code-review.yml  e2e-tests.yml  lint-action-pinning.yml  notify-docs.yml  opencode-code-review.yml  plugin-registry-index.yml  plugin-registry-stars.yml  preview-env.yml  release.yml
.opencode/agents/: architect.md  code-review.md  implementer.md  pr-poller.md  qa.md  security-auditor.md  simplify.md  test-engineer.md  verify.md
apps/backend/: Makefile
apps/cli/: package.json
apps/desktop/: AGENTS.md  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  windows-sign.ps1
apps/desktop/src-tauri/src/: backend.rs
apps/web/: AGENTS.md  global.d.ts
docs/: configuration.md  desktop-app.md  desktop-tauri-signing.md  features.md  remote-cloud-environment.md  run-as-a-service.md
docs/decisions/: 0011-transient-provider-error-retry.md  0015-explicit-completion-signal-for-auto-advance.md  0016-observed-external-file-reads.md  0017-resource-metrics-sampling.md  0025-runtime-cleanup-uses-executors-running.md  0026-tauri-desktop-shell.md  0029-release-backfill-and-desktop-diagnostics.md  0034-agentclientprotocol-codex-acp.md  0047-plugin-host-conversation-reads.md  (+16 more)
plugin-registry/: .gitignore  README.md  build-index.mjs  build-index.test.mjs  plugins.yaml  schema.json
scripts/: opencode-code-review  opencode-code-review.test.py  opencode-code-review.test.sh  pr-state  pr-state.test.sh  release-desktop.test.sh
(+1950 files in other folders)
